Fix deletion of system-level Chrome registration.

A regression suck in in r442077 causing many values to be left behind in
HKLM.

BUG=730059
R=pmonette@chromium.org

Change-Id: I6109b2e1480b5f3957db675ee36452a5ec65e16a
Reviewed-on: https://chromium-review.googlesource.com/765491
Reviewed-by: Patrick Monette <pmonette@chromium.org>
Commit-Queue: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516201}
Former-commit-id: 47768a910945bdc7b144a9a4e8100ebf77df17ca